<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings">


    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_preference_quantum"
        android:summaryOff="@string/preference_use_classical_summary"
        android:summaryOn="@string/preference_use_quantum_summary"
        android:title="@string/preference_use_quantum" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_show_photon_number"
        android:summaryOff="@string/preference_show_energy_summary"
        android:summaryOn="@string/preference_show_photon_summary"
        android:title="@string/preference_show_photon" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_auto_fragment_transition"
        android:summaryOff="@string/preference_man_switch_summary"
        android:summaryOn="@string/preference_auto_switch_summary"
        android:title="@string/preference_auto_switch" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/initial_values">

        <EditTextPreference
            android:defaultValue="1"
            android:key="edit_text_signal_photon_number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_signal_photon_number"
            android:summary="@string/preference_signal_photon_number_summary"
            android:inputType="number" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="edit_text_idler_photon_number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_idler_photon_number"
            android:summary="@string/preference_idler_photon_number_summary"
            android:inputType="number"/>

        <EditTextPreference
            android:defaultValue="1e-3"
            android:key="edit_text_q1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_q1"
            android:summary="@string/preference_q1_summary"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="edit_text_phi1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_phi1"
            android:summary="@string/preference_phi1_summary"
            android:inputType="numberDecimal"/>

        <EditTextPreference
            android:defaultValue="0"
            android:key="edit_text_q2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_q2"
            android:summary="@string/preference_q2_summary"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="edit_text_phi2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_phi2"
            android:summary="@string/preference_phi2_summary"
            android:inputType="numberDecimal"/>

    </PreferenceCategory>
</PreferenceScreen>